Volvemos a lo mismo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,115 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flores Amarillas</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ramo de flores amarillas</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: #fffbe6;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      overflow: hidden;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    #ramo {
+      position: relative;
+      width: 300px;
+      height: 300px;
+    }
+
+    .flor {
+      position: absolute;
+      width: 80px;
+      height: 80px;
+      opacity: 0;
+      transform: scale(0.2);
+      transition: all 1s ease;
+    }
+
+    .frase {
+      margin-top: 20px;
+      font-size: 1.5rem;
+      color: #444;
+      opacity: 0;
+      transition: opacity 2s ease;
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+      background: #ffd700;
+      border: none;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background: #ffcc00;
+    }
+  </style>
 </head>
 <body>
-    <div class="flower-container">
-        </div>
-    <script src="script.js"></script>
+  <div id="ramo"></div>
+  <div class="frase">Un ramo de flores amarillas para iluminar tu día ✨</div>
+  <button id="reiniciar">Repetir animación</button>
+
+  <script>
+    const posiciones = [
+      {x: 100, y: 100},
+      {x: 150, y: 120},
+      {x: 50, y: 120},
+      {x: 120, y: 160},
+      {x: 80, y: 160},
+      {x: 100, y: 60},
+      {x: 140, y: 80},
+      {x: 60, y: 80}
+    ];
+
+    const ramo = document.getElementById("ramo");
+    const frase = document.querySelector(".frase");
+    const boton = document.getElementById("reiniciar");
+
+    function iniciarAnimacion() {
+      // Limpiar ramo
+      ramo.innerHTML = "";
+      // Reiniciar frase a invisible
+      frase.style.opacity = 0;
+
+      // Crear flores
+      posiciones.forEach((pos, i) => {
+        const img = document.createElement("img");
+        img.src = "flor.png"; // <-- tu flor amarilla PNG
+        img.className = "flor";
+        ramo.appendChild(img);
+
+        setTimeout(() => {
+          img.style.left = pos.x + "px";
+          img.style.top = pos.y + "px";
+          img.style.opacity = 1;
+          img.style.transform = "scale(1)";
+        }, i * 700);
+      });
+
+      // Mostrar frase al final
+      setTimeout(() => {
+        frase.style.opacity = 1;
+      }, posiciones.length * 700 + 1000);
+    }
+
+    // Ejecutar animación al cargar
+    iniciarAnimacion();
+
+    // Botón para reiniciar animación
+    boton.addEventListener("click", iniciarAnimacion);
+  </script>
 </body>
-</html>
+    </html>
+    
