--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div id="ramo"></div>
-  <div class="frase">Un ramo de flores amarillas para iluminar tu día ✨</div>
+  <div class="frase">Un ramo de flores amarillas para iluminar tu día ✨ <br> De: Mi 👨‍💻<br> Para: Ti</div>
   <button id="reiniciar">Repetir animación</button>
 
   <script>
